# word-circles

./: .env.example  .gitignore  .prettierignore  Makefile  README.md  RELEASE.md  async_pvp_wordle_plan.md  bunfig.toml  eslint.config.mjs  foundry.toml  package.json  test-preload.ts  tsconfig.json
.github/workflows/: ci.yml  docker-publish.yml
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/migrations/: 001_init.sql  002_pvp_lobby.sql  003_events.sql  004_referrals.sql
backend/src/: bot.rs  chain.rs  dune.rs  game.rs  indexer.rs  lib.rs  main.rs  settlement.rs  words.rs
backend/src/db/: mod.rs  models.rs  postgres.rs  repository.rs  sqlite.rs
backend/src/db/migrations/: 001_initial.sql  002_indexer.sql  003_pvp.sql
backend/tests/: smoke.rs
circuits/: Nargo.toml  README.md  package.json
circuits/artifacts/: wordle_feedback.json
circuits/scripts/: build-tree.ts  poseidon.ts  prove.ts
circuits/wordle_feedback/: Nargo.toml  Prover.toml
circuits/wordle_feedback/src/: main.nr
contracts/: WordCircleStats.sol  WordCirclesEscrow.sol  WordCommitment.sol
contracts/zk/: IWordleVerifier.sol  WordleDuel.sol  WordleVerifier.sol
deployment/: README.md  arak.toml  dappnode_package.json  docker-compose.yml  releases.json  upload-ipfs.sh
deployment/api/: Dockerfile
deployment/db/: Dockerfile
deployment/indexer/: Dockerfile  arak.toml  rindexer.yaml
deployment/indexer/abis/: Escrow.json  Stats.json
docs/: issue-97-pvp-lift.md  multi-group-pvp.md  pvp-player-stats.md  zk-duel-deploy.md  zk-duel-protocol.md
dune/queries/: 01_daily_leaderboard.sql  03_global_leaderboard_streaks.sql  04_pvp_game_lifecycle.sql  05_pvp_player_leaderboard.sql  06_pvp_daily_activity.sql  07_pvp_group_tokens.sql  08_daily_retention.sql  09_pvp_matches.sql  10_pvp_group_volume_daily.sql  11_pvp_revenue.sql  12_pvp_totals.sql  README.md
dune/scripts/: build_circles_names.py
dune/uploads/: README.md
script/: Deploy.s.sol  DeployEscrow.s.sol  DeployWordleDuel.s.sol
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/config/: route.ts
src/app/api/event/: route.ts
src/app/api/game/: route.ts
src/app/api/games/: route.ts
src/app/api/games/[game_id]/: route.ts
src/app/api/games/[game_id]/transcript/: route.ts
src/app/api/group/join/: route.ts
src/app/api/guess/: route.ts
src/app/api/leaderboard/: route.ts
src/app/api/leaderboard/daily/: route.ts
src/app/api/referrals/count/: route.ts
src/app/pvp/: page.tsx
src/app/pvp/history/: page.tsx
src/app/zk-duel/: page.tsx
src/components/: Board.tsx  ConnectAccount.tsx  Game.tsx  GroupJoinPrompt.tsx  GroupPicker.tsx  HintPanel.tsx  InstructionsModal.tsx  InviteFriend.tsx  InviteWelcome.tsx  Keyboard.tsx  Leaderboard.tsx  ModeNav.tsx  OpponentStatus.tsx  PlayerProfile.tsx  PvpGame.tsx  PvpHistory.tsx  PvpResults.tsx  StatsModal.tsx  Tile.tsx  Toast.tsx  ZkDuelGame.tsx
src/lib/: circles.test.ts  circles.ts  contract.test.ts  contract.ts  flags.ts  game.server.ts  game.test.ts  game.ts  hints.test.ts  hints.ts  pvpHistory.test.ts  pvpHistory.ts  usePvpEnabled.ts  usePvpLobbies.ts  words.server.ts  words.ts
src/lib/api/: client.ts  index.ts  openapi.json  types.ts
src/lib/duel/: abi.test.ts  abi.ts  commitment.test.ts  commitment.ts  encoding.test.ts  encoding.ts  frontend.ts  index.ts  poseidon.ts  prove.test.ts  prove.ts  tree.test.ts  tree.ts
test/: PvpLift.fork.t.sol  WordCircleStats.t.sol  WordCirclesEscrow.t.sol  WordCommitment.t.sol
test/zk/: DictRoot.t.sol  WordleDuel.t.sol  WordleDuelReal.t.sol  WordleVerifier.t.sol
test/zk/fixtures/: proof  public_inputs
test/zk/fixtures/duel/: solve_proof  solve_public_inputs
