[package]
name = "word-circles-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.33", features = ["bundled"] }
rand = "0.9"
sha3 = "0.10"
hex = "0.4"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
alloy = { version = "1", features = [
    "providers",
    "provider-http",
    "signers",
    "signer-local",
    "contract",
    "sol-types",
    "network",
] }


[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
