[package]
name = "word-circles-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "postgres", "macros", "migrate"] }
rand = "0.9"
sha3 = "0.10"
hex = "0.4"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
duners = "0.1"
alloy = { version = "1", features = [
    "providers",
    "provider-http",
    "signers",
    "signer-local",
    "contract",
    "sol-types",
    "network",
] }
circles-sdk = "0.1.1"


[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "postgres"] }

# Temporary: override safe-rs 0.9.0 (pulled transitively via circles-sdk) with a
# fork that fixes MultiSend batch gas estimation. Without it, the bot's batched
# Safe txs revert at gas estimation ("MultiSend should only be called via
# delegatecall"). Upstream fix: https://github.com/tynes/safe-rs/pull/3
# Remove this patch once that merges and a fixed safe-rs is published.
[patch.crates-io]
safe-rs = { git = "https://github.com/bh2smith/safe-rs.git", branch = "fix/multisend-delegatecall-gas-estimate" }
